add tenant management registry
(cherry picked from commit 4c266109f59063828639954827a1825159ceca44)
